jasper/force-app/main/default/objects/Integration_Log__c/fields/Duplicate_Lead_Phone__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Lead_Phone__c</fullName>
    <label>Duplicate Lead Phone</label>
    <type>Phone</type>
</CustomField>