jasper/force-app/main/default/objects/Integration_Log__c/fields/Error_Messages__c.field-meta.xml
<CustomField>
    <fullName>Error_Messages__c</fullName>
    <label>Error Messages</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>