jasper/force-app/main/default/objects/Integration_Log__c/fields/Integration_Type__c.field-meta.xml
<CustomField>
    <fullName>Integration_Type__c</fullName>
    <label>Integration Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lead Creation</fullName>
            </value>
            <value>
                <fullName>Account Registration</fullName>
            </value>
            <value>
                <fullName>Order Creation</fullName>
            </value>
            <value>
                <fullName>Order Update</fullName>
            </value>
            <value>
                <fullName>Payment Creation</fullName>
            </value>
            <value>
                <fullName>Payment Update</fullName>
            </value>
            <value>
                <fullName>VIN Verification</fullName>
            </value>
            <value>
                <fullName>Service Appointment creation</fullName>
            </value>
            <value>
                <fullName>Case creation</fullName>
            </value>
            <value>
                <fullName>Service Milestone Notification</fullName>
            </value>
            <value>
                <fullName>Lead Creation - BikeDekho</fullName>
            </value>
            <value>
                <fullName>Lead Creation - 91Wheels</fullName>
            </value>
            <value>
                <fullName>Lead creation - BikeWale</fullName>
            </value>
            <value>
                <fullName>SAP</fullName>
            </value>
            <value>
                <fullName>Extended Warranty</fullName>
            </value>
            <value>
                <fullName>Lead Creation - ThinkResult</fullName>
            </value>
            <value>
                <fullName>RSA</fullName>
            </value>
            <value>
                <fullName>Reverse Integration Create Order</fullName>
            </value>
            <value>
                <fullName>Reverse Integration Update Order</fullName>
            </value>
            <value>
                <fullName>Reverse Integration Create Order Product</fullName>
            </value>
            <value>
                <fullName>Reverse Integration Delete Order Product</fullName>
            </value>
            <value>
                <fullName>Reverse Integration Create Payment</fullName>
            </value>
            <value>
                <fullName>Reverse Integration Delete Order Payment</fullName>
            </value>
            <value>
                <fullName>Reverse Integration Update User</fullName>
            </value>
            <value>
                <fullName>OTC Website</fullName>
            </value>
            <value>
                <fullName>Lucep</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>